--- a/index.html
+++ b/index.html
@@ -12,30 +12,18 @@
 </head>
 
 <body>
-  <section class="sec1" id="home">
-    <div class="main">
+  <h3 class="first" > Hi, I'm Ayanda.</h3>
+  
+
+  <div class="sec2" id="About">
+    <div class="main"></div>
       <div class="navbar">
-        <img src="IMAGES.HTML/0OqRL0-LogoMakr.png" class="logo">
         <ul>
           <li>HOME</li>
           <li>ABOUT</li>
           <li>CAPETWON </li>
         </ul>
       </div>
-      <div class="info">
-        <h3> Hi, I'm<span>Ayanda.</span></h3>
-        <h1><span>W</span>EB<span> D</span>EVELOPER</h1>
-        <h3>This website service as my official portfolio,<br> showcasing comprehensive details about myself and highlighting my professional journey in the field of web development.</h3>
-       <button ><a href="CV/CARRICULUM VITA OF AYANDA FAITH MDUDU.pdf">View CV</a></button> 
-        <!-- New button to view CV -->
-      </div>
-      <div class="image">
-        <img src="IMAGES.HTML/ME.jpeg" width="300">
-      </div>
-    </div>
-  </section>
-
-  <section class="sec2" id="About">
     <div class="info2">
       <h1><span>A</span>bout</h1>
       <h3>
@@ -46,25 +34,7 @@
       </h3>
       <h2>Favorate song</h2>
       <audio width="640" height="360" controls>
-        <source src="IMAGES.HTML/fav song.mpeg" type="video/mp4">
-        Your browser does not support the video tag.
-      </audio>
-    </div>
-  </section>
-
-  <section>
-    <div class="info4" id="Contact">
-      <h1>
-       WHERE I COME FROM
-      </h1>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/q0Jdoz4k64I?si=e1f5XP8aVt-__O82" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-
-      </iframe>
-      
-
-    </section>
-  
-
+      </div>
 </body>
 
 </html>
